# markov-chains

./: .gitignore  Adjoint.hs  LICENSE  MC.hs  MarkovChain.hs  markov-chains.cabal  markov-chains.hs  mc-adjoint.hs
app/: markov-chains.hs
src/: Adjoint.hs  MC.hs  MarkovChain.hs  RealMain.hs  Scores.hs  TransitionMatrix.hs  TransitionMatrixGenerator.hs
test/: MCTest.hs  Spec.hs  TransitionMatrixTest.hs
