name:                markov-chains
version:             0.1.0.0
synopsis:            A simple Haskell sandbox for discrete-state, discrete-time Markov chains
-- description:         
license:             MIT
license-file:        LICENSE
author:              Davide Mancusi
maintainer:          davide.mancusi@cea.fr
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable markov-chains
  main-is:             markov-chains.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, random >=1.1 && <1.2, mtl >=2.2 && <2.3, vector >=0.11 && <0.12, matrix >=0.3 && <0.4, data-ordlist >=0.4 && <0.5
  -- hs-source-dirs:      
  default-language:    Haskell2010
